--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,16 @@
-reddit-indicator (1.0) unstable; urgency=low
+reddit-indicator (1.2) trusty; urgency=low
+
+  * Third Release. Changed exec = /usr/bin/reddit
+
+ -- Mayank Saxena <mayank26saxena@gmail.com>  Wed, 15 Jun 2016 10:15:20 +0530
+
+reddit-indicator (1.1) trusty; urgency=low
+
+  * Second Release.
+
+ -- Mayank Saxena <mayank26saxena@gmail.com>  Wed, 15 Jun 2016 10:15:20 +0530
+ 
+reddit-indicator (1.0) trusty; urgency=low
 
   * Initial Release.
 
